# overdraft_model

./: .gitignore  README.md  _diagnose.py  _test_featuresel.py  overdraft model copilot instructions.md  pyproject.toml  Описание переменных.md
.continue/prompts/: p10_regression_safety_check.md  p1_compression_pass.md  p2_dead_code_finder.md  p3_abstraction_audit.md  p4_targeted_refactor.md  p5_comment_purge.md  p6_readme_reconstruction.md  p7_docstring_triage.md  p8_architecture_doc_triage.md  p9_pre_refactor_audit.md
.continue/rules/: AGENTS.md  ar1_surgical_changes.md  ar2_deletion_default.md  ar3_no_speculative_additions.md  ar4_output_diff.md  ar5_justify_abstraction.md  ar6_measure_length_reduction.md  ar7_preserve_public_contracts.md  ar8_plain_language_audit.md  ar9_clarify_before_you_code.md
notebooks/: pipeline.ipynb
outputs/: predictions.csv  submission_v1.5.csv  submission_v1.csv  submission_v2.csv  submission_v3_calibrated.csv  submission_v3_uncalibrated.csv  submission_v4.csv  submission_v5_ensemble.csv
src/model/: __init__.py  baseline.py  eda.py  feature_selection.py  features.py  final_model.py  models.py  preprocessing.py  tuning.py
