[project]
name = "mfti"
version = "0.1.0"
description = "Overdraft Offer Acceptance Prediction Model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["model*"]
